--- a/Portfolio.html
+++ b/Portfolio.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="fKfsOvPfBHAltZMNNV2hJ4jC4WJ_iugzeJAFjqbiSBo" />
     <title>Portfolio</title>
     <link rel="stylesheet" href="portfolio.css">
     <script src="portfolio.js" defer></script>
